POWR-841 inserted icons for entity embed alignment, removed nested label tag in template, fixed bug in PortlandMediaEmbedHelperClasses filter that wasn't applying alignment style to videos

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -72,3 +72,14 @@ td .form-check-input {
 .invalid-feedback {
   display: inherit;
 }
+
+// entity embed dialog
+
+.entity-embed-dialog-step--embed .form-element-container {
+  width: 150px;
+  float: left;
+  display: block;
+}
+.entity-embed-dialog-step--embed .container-inline div {
+  display: block;
+}
